@@ -7,6 +7,7 @@ Devel::NYTProf:Changes - List of significant changes to Devel::NYTProf
 =head2 Changes in Devel::NYTProf 2.02
 
   Fixed colors to use the median (not average) deviation from the median value.
+  Fixed sub name resolution to work in more, perhaps all, unusual cases.
 
   Improved accuracy of subroutine timing by deducting statement measurement overheads.
   Improved readability of subroutine caller lists.
